# DomainWildcard

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  start.bat  start.command  start.sh
app/: __init__.py  batch_runner.py  bootstrap.py  jobs.py  launcher.py  main.py  models.py  patterns.py  rate_calibration.py  rdap.py  result_cache.py  wordlist.py
app/static/: app.js  index.html  style.css  wordlist-utils.js
default wordlists/: countries.txt  names.txt
examples/: batch-summary.schema.json  patterns.txt  wordlist.txt
scripts/: domain_batch_run.py  domain_value_ranker.py  preflight.py  quickstart.py  rdap_host_speed_calibration.py  rdap_safe_speed_calibration.py
tests/: test_api_integration.py  test_batch_runner.py  test_bootstrap.py  test_domain_batch_cli.py  test_domain_value_ranker.py  test_job_sorting.py  test_launcher.py  test_patterns.py  test_rate_calibration.py  test_rdap.py  test_result_cache.py  test_wordlist.py  test_wordlist_utils.js
